--- a/index.html
+++ b/index.html
@@ -63,32 +63,32 @@
 
         <section class="audios">
 
-            <audio>
-                <source data-key="65" src="./sounds/clap.wav" type="audio/wav" />
+            <audio data-key="65">
+                <source src="./sounds/clap.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="83" src="./sounds/hihat.wav" type="audio/wav" />
+            <audio data-key="83">
+                <source src="./sounds/hihat.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="68" src="./sounds/kick.wav" type="audio/wav" />
+            <audio data-key="68">
+                <source src="./sounds/kick.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="70" src="./sounds/openhat.wav" type="audio/wav" />
+            <audio data-key="70">
+                <source src="./sounds/openhat.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="71" src="./sounds/boom.wav" type="audio/wav" />
+            <audio data-key="71">
+                <source src="./sounds/boom.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="72" src="./sounds/ride.wav" type="audio/wav" />
+            <audio data-key="72">
+                <source src="./sounds/ride.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="74" src="./sounds/snare.wav" type="audio/wav" />
+            <audio data-key="74">
+                <source src="./sounds/snare.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="75" src="./sounds/tom.wav" type="audio/wav" />
+            <audio data-key="75">
+                <source src="./sounds/tom.wav" type="audio/wav" />
             </audio>
-            <audio>
-                <source data-key="76" src="./sounds/tink.wav" type="audio/wav" />
+            <audio data-key="76">
+                <source src="./sounds/tink.wav" type="audio/wav" />
             </audio>
 
         </section>
